content/v1.3.0/en/api/catalog-system.md
---
title: Network & Platform 类目录 / Class Catalog
extra:
  sidebar: auto
---
# Network & Platform Class Catalog

## Mental Model

Treat `Network & Platform Class Catalog` as an entry point or data node for this subsystem: inspect its properties first, then decide which methods to call.

This page lists every public type in this area from the 1.3.0 source, grouped by namespace. **101** types total, **101** with a deep doc page (linked). Auto-generated by `tools/gen-class-catalog.mjs`.

> Legend: C=class S=struct I=interface E=enum. 🔗 = has a deep doc page.

## Helpers (43)

| | 名称 Name | 文档 Doc |
|---|---|---|
| E | [AIDifficulty](/v1.3.15/en/api/campaign-ext/AIDifficulty) | 🔗 |
| C | [AiHelper](/v1.3.15/en/api/campaign-ext/AiHelper) | 🔗 |
| C | [AlleyHelper](/v1.3.15/en/api/campaign-ext/AlleyHelper) | 🔗 |
| C | [BannerHelper](/v1.3.15/en/api/campaign-ext/BannerHelper) | 🔗 |
| C | [BarterHelper](/v1.3.15/en/api/campaign-ext/BarterHelper) | 🔗 |
| C | [BoardGameHelper](/v1.3.15/en/api/campaign-ext/BoardGameHelper) | 🔗 |
| E | [BoardGameState](/v1.3.15/en/api/campaign-ext/BoardGameState) | 🔗 |
| C | [BuildingHelper](/v1.3.15/en/api/campaign-ext/BuildingHelper) | 🔗 |
| C | [CaravanHelper](/v1.3.15/en/api/campaign-ext/CaravanHelper) | 🔗 |
| C | [CharacterHelper](/v1.3.15/en/api/campaign-ext/CharacterHelper) | 🔗 |
| C | [CraftingHelper](/v1.3.15/en/api/campaign-ext/CraftingHelper) | 🔗 |
| C | [DialogHelper](/v1.3.15/en/api/campaign-ext/DialogHelper) | 🔗 |
| C | [DiplomacyHelper](/v1.3.15/en/api/campaign-ext/DiplomacyHelper) | 🔗 |
| C | [DistanceHelper](/v1.3.15/en/api/campaign-ext/DistanceHelper) | 🔗 |
| C | [EmbarkDisembarkData](/v1.3.15/en/api/campaign-ext/EmbarkDisembarkData) | 🔗 |
| C | [EquipmentHelper](/v1.3.15/en/api/campaign-ext/EquipmentHelper) | 🔗 |
| C | [FactionHelper](/v1.3.15/en/api/campaign-ext/FactionHelper) | 🔗 |
| C | [HeroHelper](/v1.3.15/en/api/campaign-ext/HeroHelper) | 🔗 |
| C | [IncidentHelper](/v1.3.15/en/api/campaign-ext/IncidentHelper) | 🔗 |
| E | [InventoryCategoryType](/v1.3.15/en/api/campaign-ext/InventoryCategoryType) | 🔗 |
| E | [InventoryItemType](/v1.3.15/en/api/campaign-ext/InventoryItemType) | 🔗 |
| E | [InventoryMode](/v1.3.15/en/api/campaign-ext/InventoryMode) | 🔗 |
| C | [InventoryScreenHelper](/v1.3.15/en/api/campaign-ext/InventoryScreenHelper) | 🔗 |
| C | [ItemHelper](/v1.3.15/en/api/campaign-ext/ItemHelper) | 🔗 |
| C | [MapEventHelper](/v1.3.15/en/api/campaign-ext/MapEventHelper) | 🔗 |
| C | [MenuHelper](/v1.3.15/en/api/campaign-ext/MenuHelper) | 🔗 |
| C | [MiscHelper](/v1.3.15/en/api/campaign-ext/MiscHelper) | 🔗 |
| C | [MobilePartyHelper](/v1.3.15/en/api/campaign-ext/MobilePartyHelper) | 🔗 |
| C | [NavigationHelper](/v1.3.15/en/api/campaign-ext/NavigationHelper) | 🔗 |
| C | [PartyBaseHelper](/v1.3.15/en/api/campaign-ext/PartyBaseHelper) | 🔗 |
| C | [PartyScreenHelper](/v1.3.15/en/api/campaign-ext/PartyScreenHelper) | 🔗 |
| E | [PartyScreenMode](/v1.3.15/en/api/campaign-ext/PartyScreenMode) | 🔗 |
| C | [PerkHelper](/v1.3.15/en/api/campaign-ext/PerkHelper) | 🔗 |
| C | [PersuasionHelper](/v1.3.15/en/api/campaign-ext/PersuasionHelper) | 🔗 |
| C | [PortStateHelper](/v1.3.15/en/api/campaign-ext/PortStateHelper) | 🔗 |
| C | [QuestHelper](/v1.3.15/en/api/campaign-ext/QuestHelper) | 🔗 |
| C | [SettlementHelper](/v1.3.15/en/api/campaign-ext/SettlementHelper) | 🔗 |
| C | [ShipHelper](/v1.3.15/en/api/campaign-ext/ShipHelper) | 🔗 |
| C | [SkillHelper](/v1.3.15/en/api/campaign-ext/SkillHelper) | 🔗 |
| C | [StringHelpers](/v1.3.15/en/api/campaign-ext/StringHelpers) | 🔗 |
| C | [TeleportationHelper](/v1.3.15/en/api/campaign-ext/TeleportationHelper) | 🔗 |
| C | [TooltipHelper](/v1.3.15/en/api/campaign-ext/TooltipHelper) | 🔗 |
| C | [TownHelpers](/v1.3.15/en/api/campaign-ext/TownHelpers) | 🔗 |

## TaleWorlds.Diamond (36)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AccessObject](/v1.3.15/en/api/campaign-ext/AccessObject) | 🔗 |
| C | [AccessObjectJsonConverter](/v1.3.15/en/api/campaign-ext/AccessObjectJsonConverter) | 🔗 |
| C | [AccessObjectResult](/v1.3.15/en/api/campaign-ext/AccessObjectResult) | 🔗 |
| C | [AesHelper](/v1.3.15/en/api/campaign-ext/AesHelper) | 🔗 |
| C | [Client](/v1.3.15/en/api/campaign-ext/Client) | 🔗 |
| C | [EpicAccessObject](/v1.3.15/en/api/campaign-ext/EpicAccessObject) | 🔗 |
| C | [FunctionResult](/v1.3.15/en/api/campaign-ext/FunctionResult) | 🔗 |
| C | [FunctionResultJsonConverter](/v1.3.15/en/api/campaign-ext/FunctionResultJsonConverter) | 🔗 |
| C | [GDKAccessObject](/v1.3.15/en/api/campaign-ext/GDKAccessObject) | 🔗 |
| C | [GOGAccessObject](/v1.3.15/en/api/campaign-ext/GOGAccessObject) | 🔗 |
| C | [HandlerResult](/v1.3.15/en/api/campaign-ext/HandlerResult) | 🔗 |
| I | [IClient](/v1.3.15/en/api/campaign-ext/IClient) | 🔗 |
| I | [IClientSession](/v1.3.15/en/api/campaign-ext/IClientSession) | 🔗 |
| I | [IClientSessionProvider](/v1.3.15/en/api/campaign-ext/IClientSessionProvider) | 🔗 |
| I | [IConnectionInformation](/v1.3.15/en/api/campaign-ext/IConnectionInformation) | 🔗 |
| I | [ILoginAccessProvider](/v1.3.15/en/api/campaign-ext/ILoginAccessProvider) | 🔗 |
| C | [InnerProcessConnectionInformation](/v1.3.15/en/api/campaign-ext/InnerProcessConnectionInformation) | 🔗 |
| E | [LoginBanReason](/v1.3.15/en/api/campaign-ext/LoginBanReason) | 🔗 |
| E | [LoginErrorCode](/v1.3.15/en/api/campaign-ext/LoginErrorCode) | 🔗 |
| C | [LoginMessage](/v1.3.15/en/api/campaign-ext/LoginMessage) | 🔗 |
| C | [LoginResult](/v1.3.15/en/api/campaign-ext/LoginResult) | 🔗 |
| C | [LoginResultObject](/v1.3.15/en/api/campaign-ext/LoginResultObject) | 🔗 |
| C | [LoginResultObjectJsonConverter](/v1.3.15/en/api/campaign-ext/LoginResultObjectJsonConverter) | 🔗 |
| C | [Message](/v1.3.15/en/api/campaign-ext/Message) | 🔗 |
| C | [MessageDescription](/v1.3.15/en/api/campaign-ext/MessageDescription) | 🔗 |
| C | [MessageJsonConverter](/v1.3.15/en/api/campaign-ext/MessageJsonConverter) | 🔗 |
| S | [PeerId](/v1.3.15/en/api/campaign-ext/PeerId) | 🔗 |
| C | [PeerIdJsonConverter](/v1.3.15/en/api/campaign-ext/PeerIdJsonConverter) | 🔗 |
| C | [PlayerIdExtensions](/v1.3.15/en/api/campaign-ext/PlayerIdExtensions) | 🔗 |
| C | [PSAccessObject](/v1.3.15/en/api/campaign-ext/PSAccessObject) | 🔗 |
| C | [SessionCredentials](/v1.3.15/en/api/campaign-ext/SessionCredentials) | 🔗 |
| S | [SessionKey](/v1.3.15/en/api/campaign-ext/SessionKey) | 🔗 |
| C | [SteamAccessObject](/v1.3.15/en/api/campaign-ext/SteamAccessObject) | 🔗 |
| C | [TestAccessObject](/v1.3.15/en/api/campaign-ext/TestAccessObject) | 🔗 |
| C | [ThreadedClient](/v1.3.15/en/api/campaign-ext/ThreadedClient) | 🔗 |
| C | [ThreadedClientSession](/v1.3.15/en/api/campaign-ext/ThreadedClientSession) | 🔗 |

## TaleWorlds.Diamond.ClientApplication (6)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [ClientApplicationConfiguration](/v1.3.15/en/api/campaign-ext/ClientApplicationConfiguration) | 🔗 |
| C | [DiamondClientApplication](/v1.3.15/en/api/campaign-ext/DiamondClientApplication) | 🔗 |
| C | [DiamondClientApplicationObject](/v1.3.15/en/api/campaign-ext/DiamondClientApplicationObject) | 🔗 |
| C | [GenericRestSessionProvider](/v1.3.15/en/api/campaign-ext/GenericRestSessionProvider) | 🔗 |
| C | [GenericThreadedRestSessionProvider](/v1.3.15/en/api/campaign-ext/GenericThreadedRestSessionProvider) | 🔗 |
| E | [SessionProviderType](/v1.3.15/en/api/campaign-ext/SessionProviderType) | 🔗 |

## TaleWorlds.Diamond.Rest (14)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AliveMessage](/v1.3.15/en/api/campaign-ext/AliveMessage) | 🔗 |
| C | [ClientRestSession](/v1.3.15/en/api/campaign-ext/ClientRestSession) | 🔗 |
| C | [ConnectMessage](/v1.3.15/en/api/campaign-ext/ConnectMessage) | 🔗 |
| C | [DisconnectMessage](/v1.3.15/en/api/campaign-ext/DisconnectMessage) | 🔗 |
| E | [MessageType](/v1.3.15/en/api/campaign-ext/MessageType) | 🔗 |
| C | [RestData](/v1.3.15/en/api/campaign-ext/RestData) | 🔗 |
| C | [RestDataJsonConverter](/v1.3.15/en/api/campaign-ext/RestDataJsonConverter) | 🔗 |
| C | [RestFunctionResult](/v1.3.15/en/api/campaign-ext/RestFunctionResult) | 🔗 |
| C | [RestObjectFunctionResult](/v1.3.15/en/api/campaign-ext/RestObjectFunctionResult) | 🔗 |
| C | [RestObjectRequestMessage](/v1.3.15/en/api/campaign-ext/RestObjectRequestMessage) | 🔗 |
| C | [RestObjectResponseMessage](/v1.3.15/en/api/campaign-ext/RestObjectResponseMessage) | 🔗 |
| C | [RestRequestMessage](/v1.3.15/en/api/campaign-ext/RestRequestMessage) | 🔗 |
| C | [RestResponse](/v1.3.15/en/api/campaign-ext/RestResponse) | 🔗 |
| C | [RestResponseMessage](/v1.3.15/en/api/campaign-ext/RestResponseMessage) | 🔗 |

## TaleWorlds.Diamond.Socket (2)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [ClientSocketSession](/v1.3.15/en/api/campaign-ext/ClientSocketSession) | 🔗 |
| C | [SocketMessage](/v1.3.15/en/api/campaign-ext/SocketMessage) | 🔗 |
